--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.6",
   "private": true,
   "scripts": {
-    "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
+    "start": "NODE_ENV=production node server.js",
     "dev": "next dev",
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
