Updated Events page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tailwind-nextjs-starter-blog",
+  "name": "acm-nitsurat-website",
   "version": "1.5.6",
   "private": true,
   "scripts": {
